# ai-engineering-fordham

./: README.md  homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb  main.py  pyproject.toml
scripts/: helpers.py
